# SCodes

examples/QmlBarcodeGenerator/: CMakeLists.txt  QmlBarcodeGenerator.pro
examples/QmlBarcodeReader/: CMakeLists.txt
src/: CMakeLists.txt  SBarcodeScanner.cpp  SBarcodeScanner.h
